--- a/Spanish/main/Settings.apk/res/values-es/arrays.xml
+++ b/Spanish/main/Settings.apk/res/values-es/arrays.xml
@@ -508,4 +508,8 @@
         <item>Mostrar áreas para deuteranomalía</item>
         <item>Mostrar contador de sobredibujdo</item>
     </string-array>
+	<string-array name="priority_storage_entries">
+        <item>Memoria interna</item>
+        <item>Memoria externa</item>
+    </string-array>
 </resources>
