--- a/Spanish/main/NetworkAssistant2.apk/res/values-es/arrays.xml
+++ b/Spanish/main/NetworkAssistant2.apk/res/values-es/arrays.xml
@@ -1,59 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="traffic_uints">
-        <item>B</item>
-        <item>KB</item>
-        <item>MB</item>
-        <item>GB</item>
-    </string-array>
     <string-array name="date_of_traffic">
-        <item>"Yesterday "</item>
-        <item>"Today "</item>
-        <item>"This month "</item>
+        <item>"Ayer "</item>
+        <item>"Hoy "</item>
+        <item>"Este mes "</item>
     </string-array>
     <string-array name="date_of_traffic_prefix">
-        <item>"Yesterday: "</item>
-        <item>"Today: "</item>
-        <item>"This month: "</item>
+        <item>"Ayer: "</item>
+        <item>"Hoy: "</item>
+        <item>"Este mes: "</item>
     </string-array>
     <string-array name="date_of_app_all">
-        <item>Yesterday (Data)</item>
-        <item>Today (Data)</item>
-        <item>This month (Data)</item>
-        <item>Yesterday WLAN</item>
-        <item>Today WLAN</item>
-        <item>This month WLAN</item>
+        <item>Ayer (Datos)</item>
+        <item>Hoy (Datos)</item>
+        <item>Este mes (Datos)</item>
+        <item>Ayer WiFi</item>
+        <item>Hoy WiFi</item>
+        <item>Este mes WiFi</item>
     </string-array>
     <string-array name="date_of_app">
-        <item>Yesterday (Data)</item>
-        <item>Today (Data)</item>
-        <item>This month (Data)</item>
+        <item>Ayer (Datos)</item>
+        <item>Hoy (Datos)</item>
+        <item>Este mes (Datos)</item>
     </string-array>
     <string-array name="network_speed_update_internals">
-        <item>3 secs</item>
-        <item>4 secs</item>
-        <item>5 secs</item>
-        <item>6 secs</item>
-        <item>7 secs</item>
-        <item>8 secs</item>
-        <item>9 secs</item>
+        <item>3 seg</item>
+        <item>4 seg</item>
+        <item>5 seg</item>
+        <item>6 seg</item>
+        <item>7 seg</item>
+        <item>8 seg</item>
+        <item>9 seg</item>
     </string-array>
     <string-array name="traffic_type">
-        <item>"Mobile usage "</item>
-        <item>"WLAN usage "</item>
-        <item>"Data saved "</item>
+        <item>"Uso datos "</item>
+        <item>"Uso WiFi "</item>
+        <item>"Datos guardados "</item>
     </string-array>
     <string-array name="mi_service_traffic_type">
-        <item>"Mobile usage "</item>
-        <item>"WLAN usage "</item>
+        <item>"Uso datos "</item>
+        <item>"Uso WiFi "</item>
     </string-array>
     <string-array name="traffic_sort_type">
-        <item>"Mobile data usage "</item>
-        <item>"WLAN usage "</item>
-        <item>"Data saved "</item>
+        <item>"Uso datos "</item>
+        <item>"Uso WiFi "</item>
+        <item>"Datos guardados "</item>
     </string-array>
     <string-array name="traffic_setting_sms_template">
-        <item>Get message template automatically</item>
-        <item>Set message template manually</item>
+        <item>Obtener plantilla de mensaje de forma automática</item>
+        <item>Establecer plantilla de mensaje de forma manual</item>
     </string-array>
 </resources>
