--- a/Spanish/main/FM.apk/res/values-es/arrays.xml
+++ b/Spanish/main/FM.apk/res/values-es/arrays.xml
@@ -1,333 +1,170 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="sleep_duration_values">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>45 minutes</item>
-        <item>1 Hour</item>
-    </string-array>
-    <string-array name="sleep_duration_values_seconds">
-        <item>900</item>
-        <item>1800</item>
-        <item>2700</item>
-        <item>3600</item>
+        <item>"15 minutos"</item>
+        <item>"30 Minutos"</item>
+        <item>"45 minutos"</item>
+        <item>"1 hora"</item>
     </string-array>
     <string-array name="search_category_rbds_entries">
-        <item>All Stations</item>
-        <item>Adult Hits</item>
-        <item>Classical</item>
-        <item>Classic Rock</item>
-        <item>College</item>
-        <item>Country</item>
-        <item>Emergency</item>
-        <item>Emergency Test</item>
-        <item>Foreign Language</item>
-        <item>Information</item>
-        <item>Jazz</item>
-        <item>News</item>
-        <item>Nostalgia</item>
-        <item>Oldies</item>
-        <item>Personality</item>
-        <item>Public</item>
-        <item>Religious Music</item>
-        <item>Religious Talk</item>
-        <item>Rhythm and Blues</item>
-        <item>Rock</item>
-        <item>Soft</item>
-        <item>Soft Rock</item>
-        <item>Soft Rhythm and Blues</item>
-        <item>Sports</item>
-        <item>Talk</item>
-        <item>Top 40</item>
-        <item>Weather</item>
-    </string-array>
-    <string-array name="search_category_rbds_values">
-        <item>0</item>
-        <item>7</item>
-        <item>15</item>
-        <item>6</item>
-        <item>23</item>
-        <item>10</item>
-        <item>31</item>
-        <item>30</item>
-        <item>18</item>
-        <item>2</item>
-        <item>14</item>
-        <item>1</item>
-        <item>13</item>
-        <item>11</item>
-        <item>21</item>
-        <item>22</item>
-        <item>19</item>
-        <item>20</item>
-        <item>16</item>
-        <item>5</item>
-        <item>12</item>
-        <item>8</item>
-        <item>17</item>
-        <item>3</item>
-        <item>4</item>
-        <item>9</item>
-        <item>29</item>
+        <item>"Todas las estaciones"</item>
+        <item>"Adultos"</item>
+        <item>"Clásica"</item>
+        <item>"Classic Rock"</item>
+        <item>"Universidad"</item>
+        <item>"Country"</item>
+        <item>"Emergencia"</item>
+        <item>"Prueba de emergencia"</item>
+        <item>"Idiomas"</item>
+        <item>"Información"</item>
+        <item>"Jazz"</item>
+        <item>"Noticias"</item>
+        <item>"Nostalgia"</item>
+        <item>"Oldies"</item>
+        <item>"Psersonal"</item>
+        <item>"Público"</item>
+        <item>"Música Religiosa"</item>
+        <item>"Habla religiosa"</item>
+        <item>"Rhythm and Blues"</item>
+        <item>"custom"</item>
+        <item>"Suave"</item>
+        <item>"Rock Blando"</item>
+        <item>"Soft Rhythm and Blues"</item>
+        <item>"Deportes"</item>
+        <item>"Hablar"</item>
+        <item>"Top 40"</item>
+        <item>"El tiempo"</item>
     </string-array>
     <string-array name="search_category_rds_entries">
-        <item>All Stations</item>
-        <item>Culture</item>
-        <item>Current Affairs</item>
-        <item>"Children's programs"</item>
-        <item>Country Music</item>
-        <item>Documentary</item>
-        <item>Drama</item>
-        <item>Easy Listening Music</item>
-        <item>Education</item>
-        <item>Emergency</item>
-        <item>Emergency Test</item>
-        <item>Finance</item>
-        <item>Folk Music</item>
-        <item>Information</item>
-        <item>Jazz Music</item>
-        <item>Light classical</item>
-        <item>Leisure</item>
-        <item>News</item>
-        <item>National Music</item>
-        <item>Other Music</item>
-        <item>Oldies Music</item>
-        <item>Phone In</item>
-        <item>Pop Music</item>
-        <item>Religion</item>
-        <item>Rock Music</item>
-        <item>Science</item>
-        <item>Serious classical</item>
-        <item>Social Affairs</item>
-        <item>Sport</item>
-        <item>Travel</item>
-        <item>Varied</item>
-        <item>Weather</item>
-    </string-array>
-    <string-array name="search_category_rds_values">
-        <item>0</item>
-        <item>7</item>
-        <item>2</item>
-        <item>18</item>
-        <item>25</item>
-        <item>29</item>
-        <item>6</item>
-        <item>12</item>
-        <item>5</item>
-        <item>31</item>
-        <item>30</item>
-        <item>17</item>
-        <item>28</item>
-        <item>3</item>
-        <item>24</item>
-        <item>13</item>
-        <item>23</item>
-        <item>1</item>
-        <item>26</item>
-        <item>15</item>
-        <item>27</item>
-        <item>21</item>
-        <item>10</item>
-        <item>20</item>
-        <item>11</item>
-        <item>8</item>
-        <item>14</item>
-        <item>19</item>
-        <item>4</item>
-        <item>22</item>
-        <item>9</item>
-        <item>16</item>
+        <item>"Todas las estaciones"</item>
+        <item>"Cultura"</item>
+        <item>"Actualidad"</item>
+        <item>"Programas para niños"</item>
+        <item>"Country Music"</item>
+        <item>"Documental"</item>
+        <item>"Teatro"</item>
+        <item>"Easy Listening Música"</item>
+        <item>"Educación"</item>
+        <item>"Emergencia"</item>
+        <item>"Prueba de emergencia"</item>
+        <item>"Finanzas"</item>
+        <item>"Folk Music"</item>
+        <item>"Información"</item>
+        <item>"Jazz Music"</item>
+        <item>"Luz clásica"</item>
+        <item>"Ocio"</item>
+        <item>"Noticias"</item>
+        <item>"Nacional de Música"</item>
+        <item>"Otros Music"</item>
+        <item>"Oldies Music"</item>
+        <item>"Telefonico"</item>
+        <item>"Pop Music"</item>
+        <item>"La religión"</item>
+        <item>"Rock Music"</item>
+        <item>" Ciencias"</item>
+        <item>"Serious clásica"</item>
+        <item>"Asuntos Sociales"</item>
+        <item>"Deporte"</item>
+        <item>"Viajes"</item>
+        <item>"Variada"</item>
+        <item>"El tiempo"</item>
     </string-array>
     <string-array name="presetlist_edit_category">
-        <item>Rename</item>
-        <item>Auto-Select</item>
-        <item>Delete</item>
+        <item>"Renombrar"</item>
+        <item>"Auto-Select"</item>
+        <item>"Eliminar"</item>
     </string-array>
     <string-array name="regional_band_entries">
-        <item>North America</item>
-        <item>Europe</item>
-        <item>Japan</item>
-        <item>Japan (Wide)</item>
-        <item>Australia</item>
-        <item>Austria</item>
-        <item>Belgium</item>
-        <item>Brazil</item>
-        <item>China</item>
-        <item>Czech</item>
-        <item>Denmark</item>
-        <item>Finland</item>
-        <item>France</item>
-        <item>Germany</item>
-        <item>Greece</item>
-        <item>Hong Kong</item>
-        <item>India</item>
-        <item>Ireland</item>
-        <item>Italy</item>
-        <item>Korea</item>
-        <item>Mexico</item>
-        <item>Netherlands</item>
-        <item>New Zealand</item>
-        <item>Norway</item>
-        <item>Poland</item>
-        <item>Portugal</item>
-        <item>Russia</item>
-        <item>Singapore</item>
-        <item>Slovakia</item>
-        <item>Spain</item>
-        <item>Switzerland</item>
-        <item>Sweden</item>
-        <item>Taiwan</item>
-        <item>Turkey</item>
-        <item>United Kingdom</item>
-        <item>United States</item>
-    </string-array>
-    <string-array name="regional_band_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-        <item>6</item>
-        <item>7</item>
-        <item>8</item>
-        <item>9</item>
-        <item>10</item>
-        <item>11</item>
-        <item>12</item>
-        <item>13</item>
-        <item>14</item>
-        <item>15</item>
-        <item>16</item>
-        <item>17</item>
-        <item>18</item>
-        <item>19</item>
-        <item>20</item>
-        <item>21</item>
-        <item>22</item>
-        <item>23</item>
-        <item>24</item>
-        <item>25</item>
-        <item>26</item>
-        <item>27</item>
-        <item>28</item>
-        <item>29</item>
-        <item>30</item>
-        <item>31</item>
-        <item>32</item>
-        <item>33</item>
-        <item>34</item>
-        <item>35</item>
+        <item>"América del Norte"</item>
+        <item>"Europa"</item>
+        <item>"Japón"</item>
+        <item>"Japón (Wide)"</item>
+        <item>"Australia"</item>
+        <item>"Austria"</item>
+        <item>"Bélgica"</item>
+        <item>"Brasil"</item>
+        <item>"JAPON
+"</item>
+        <item>"Checo"</item>
+        <item>"Dinamarca"</item>
+        <item>"Finlandia"</item>
+        <item>"Francia"</item>
+        <item>"Alemania"</item>
+        <item>"Grecia"</item>
+        <item>"Hong Kong"</item>
+        <item>"La India (L'Inde)"</item>
+        <item>"Irlanda"</item>
+        <item>"Italia"</item>
+        <item>"viajar fuera de Corea?\""</item>
+        <item>"México"</item>
+        <item>"Países Bajos"</item>
+        <item>"Nueva Zelanda"</item>
+        <item>"Noruega"</item>
+        <item>"Polonia"</item>
+        <item>"Portugal"</item>
+        <item>"Rusia"</item>
+        <item>"Singapur"</item>
+        <item>"Eslovaquia"</item>
+        <item>"España"</item>
+        <item>"Suiza"</item>
+        <item>"Suecia"</item>
+        <item>"Taiwan"</item>
+        <item>"Turquía"</item>
+        <item>"Reino Unido"</item>
+        <item>"Estados Unidos de América."</item>
     </string-array>
     <string-array name="regional_band_summary">
-        <item>North America (87.5MHz To 108.0MHz In 200 Khz Steps)</item>
-        <item>Europe (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Japan (76.0MHz To 90.0MHz In 100 Khz Steps)</item>
-        <item>Japan (Wide) (90.0MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Australia (87.7MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Austria (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Belgium (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Brazil (87.8MHz To 108.0MHz In 200 Khz Step)</item>
-        <item>China (87.0MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Czech (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Denmark (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Finland (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>France (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Germany (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Greece (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Hong Kong (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>India (91.0MHz To 106.4MHz In 100 Khz Steps)</item>
-        <item>Ireland (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Italy (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Korea (87.5MHz To 108.0MHz In 200 Khz Steps)</item>
-        <item>Mexico (88.1MHz To 107.9MHz In 200 Khz Steps)</item>
-        <item>Netherlands (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>New Zealand (88.0MHz To 107.0MHz In 100 Khz Steps)</item>
-        <item>Norway (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Poland (88.0MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Portugal (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-        <item>Russia (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Singapore (88.0MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Slovakia (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Spain (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Switzerland (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Sweden (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Taiwan (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>Turkey (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>United Kingdom (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-        <item>United States (88.1MHz To 107.9MHz In 200 Khz Steps)</item>
+        <item>"América del Norte (87,5 Para 108.0MHz En 200 kHz Pasos)"</item>
+        <item>"Europa (87.5MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Japón (76.0MHz Para 90.0mhz En 100 kHz Pasos)"</item>
+        <item>"Japón (Wide) (90.0mhz Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Australia (87.7MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Austria (87,5 Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Bélgica (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Brasil (87.8MHz Para 108.0MHz En 200 Khz Paso)"</item>
+        <item>"China (87.0MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Checa (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Dinamarca (87,5 Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Finlandia (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Francia (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Alemania (87,5 Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Grecia (87,5 Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Hong Kong (87.5 MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"India (91.0MHz Para 106.4MHz En 100 kHz Pasos)"</item>
+        <item>"Irlanda (87,5 Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Italia (87,5 Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Corea (87.5MHz Para 108.0MHz En 200 kHz Pasos)"</item>
+        <item>"México (88.1MHz Para 107.9MHz En 200 kHz Pasos)"</item>
+        <item>"Países Bajos (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Nueva Zelanda (88.0MHz Para 107.0MHz En 100 kHz Pasos)"</item>
+        <item>"Noruega (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Polonia (88.0MHz Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Portugal (87,5 Para 108.0MHz En 50 kHz Pasos)"</item>
+        <item>"Rusia (87.5 MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Singapur (88.0MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Eslovaquia (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"España (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Suiza (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Suecia (87,5 Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Taiwan (87.5MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Turquía (87.5 MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Reino Unido (87.5 MHz Para 108.0MHz En 100 kHz Pasos)"</item>
+        <item>"Estados Unidos (88.1MHz Para 107.9MHz En 200 kHz Pasos)"</item>
     </string-array>
     <string-array name="rf_cfg">
-        <item>Get Current Station Parameters</item>
-        <item>Get Station Parameters Repeat 20 times</item>
-        <item>Get Search station parameters</item>
-        <item>Get FM Band sweep parameters</item>
-        <item>Configure FM Search Parameters</item>
+        <item>"Obtener Parámetros de la estación actual"</item>
+        <item>"Obtener los parámetros Estación Repetir 20 veces"</item>
+        <item>"Obtener parámetros de la estación Buscar"</item>
+        <item>"Obtener parámetros de barrido FM Band"</item>
+        <item>"Configure FM Parámetros de búsqueda"</item>
     </string-array>
     <string-array name="cfg_rf">
-        <item>Set FM RSSI Delta</item>
-        <item>Set Signal Threshold</item>
-        <item>RF Statistics</item>
+        <item>"Establecer FM RSSI Delta"</item>
+        <item>"Ajuste Umbral de señal"</item>
+        <item>"Estadísticas de RF"</item>
     </string-array>
     <string-array name="stats_options">
-        <item>Select the option</item>
-        <item>Configure FM Search parameters</item>
-        <item>RF Statistics</item>
+        <item>"Seleccione la opción"</item>
+        <item>"Configure FM parámetros de búsqueda"</item>
+        <item>"Estadísticas de RF"</item>
     </string-array>
-    <string-array name="fm_mhz_number_entries">
-        <item>" "</item>
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-        <item>6</item>
-        <item>7</item>
-        <item>8</item>
-        <item>9</item>
-        <item>.</item>
-    </string-array>
-    <array name="fm_mhz_number_entryValues">
-        <item>@drawable/fm_mhz_empty</item>
-        <item>@drawable/fm_mhz_0</item>
-        <item>@drawable/fm_mhz_1</item>
-        <item>@drawable/fm_mhz_2</item>
-        <item>@drawable/fm_mhz_3</item>
-        <item>@drawable/fm_mhz_4</item>
-        <item>@drawable/fm_mhz_5</item>
-        <item>@drawable/fm_mhz_6</item>
-        <item>@drawable/fm_mhz_7</item>
-        <item>@drawable/fm_mhz_8</item>
-        <item>@drawable/fm_mhz_9</item>
-        <item>@drawable/fm_mhz_point</item>
-    </array>
-    <string-array name="freq_entries">
-        <item>" "</item>
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-        <item>6</item>
-        <item>7</item>
-        <item>8</item>
-        <item>9</item>
-        <item>.</item>
-    </string-array>
-    <array name="freq_entryValues">
-        <item>@drawable/fm_number_empty</item>
-        <item>@drawable/fm_number_0</item>
-        <item>@drawable/fm_number_1</item>
-        <item>@drawable/fm_number_2</item>
-        <item>@drawable/fm_number_3</item>
-        <item>@drawable/fm_number_4</item>
-        <item>@drawable/fm_number_5</item>
-        <item>@drawable/fm_number_6</item>
-        <item>@drawable/fm_number_7</item>
-        <item>@drawable/fm_number_8</item>
-        <item>@drawable/fm_number_9</item>
-        <item>@drawable/fm_number_point</item>
-    </array>
 </resources>
