--- a/Spanish/main/MiuiHome.apk/res/values-es/arrays.xml
+++ b/Spanish/main/MiuiHome.apk/res/values-es/arrays.xml
@@ -48,7 +48,7 @@
     <item>Neblina</item>
   </string-array>
   <string-array name="editing_mode_entries">
-        <item>Movee apps</item>
+        <item>Mover apps</item>
         <item>Widgets</item>
         <item>Fondos</item>
         <item>Efectos</item>
